Adapt COVID sensor to fetch latest scale graphic
The infection scale graphic now has a date in the URL, which corresponds to the last data update, not necessarily today.  This is handled by adding an attribute to the COVID rate sensor to fetch the update date (with corresponding changes to the Python script to output both in JSON).  The date and postcode are then used to build the URL for a camera sensor to provide the graphic.  Location-specific secrets are rationalised.

--- a/packages/covid/automation.yaml
+++ b/packages/covid/automation.yaml
@@ -2,6 +2,9 @@
 # Automations for COVID data
 ########
 covid_automation:
+  input_text:
+    postcode:
+      initial: !secret postcode
   automation:
     - id: '1611945742569'
       alias: COVID Alert
@@ -24,6 +27,7 @@ covid_automation:
               {% if not states('sensor.covid_alert_raw') == 'unknown' -%}
               {{ state_attr('sensor.covid_alert_raw', 'name') }}, {% endif %}
               {{- states('sensor.covid_rate') }}/100k people.
-            url: !secret local_covid_url
+            url: "https://coronavirus.data.gov.uk/search?postcode=\
+              {{- states('input_text.postcode') | replace(' ', '+') -}}"
       mode: single
 ...
