Tolerate bad covid rates
Default to 0 when value can't be converted to float, i.e. when N/A is returned for low numbers of infections.

--- a/packages/covid/sensor.yaml
+++ b/packages/covid/sensor.yaml
@@ -14,7 +14,7 @@ covid_sensor:
       scan_interval: 21600
       json_attributes:
         - date
-      value_template: "{{ float(value_json.rate | replace(',', '')) }}"
+      value_template: "{{ float(value_json.rate | replace(',', ''), 0) }}"
 
 #
 # Alert levels are not currently being published
